<?xml version="1.0"?>
<package format="2">
  <name>viso2</name>
  <version>0.0.0</version>
  <description>Monoscopic and Stereoscopic visual odometry</description>

  <license>GPLv3</license>
 <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
